{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 44,
  "lineage": "f964973e-896b-44f4-697e-927bbd695a80",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongodb_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-28T02:53:39.897-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rickfav/global/firewalls/allow-mongodb",
            "log_config": [],
            "name": "allow-mongodb",
            "network": "https://www.googleapis.com/compute/v1/projects/rickfav/global/networks/default",
            "priority": 1000,
            "project": "rickfav",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rickfav/global/firewalls/allow-mongodb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongodb_ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-28T02:53:39.802-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rickfav/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/rickfav/global/networks/default",
            "priority": 1000,
            "project": "rickfav",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rickfav/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongodb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "mongodb-data-disk",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/rickfav/zones/us-central1-a/disks/mongodb-data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210927",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/rickfav/zones/us-central1-a/disks/mongodb-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2024-11-28T02:53:47.844-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/rickfav/zones/us-central1-a/instances/mongodb-instance",
            "instance_id": "1853456778514527573",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC75KiZEg0n5uZ/qs0He/9jBViyc3YlIdC+gia4Hkc4J1EEAd32HjcnhyoK+cdcE3geJYf2eUOP7qHVpgYLqm4rE6jcrflm367GnfIWehu37wb7/YMQLBas7D+s/0fmBbfmE2GbU3qR/l130tO54q+Zzt+ExD+3Hklf5NZipI4IFHio02tXj5FWQ900NSppaSAYBJbEH6+qw7H9RV14vtMwz/G49wSh2sCGXbIhozVIkDL41aDY5bpYHu03dK4QWguMocOSvtBmanidbC2oxpskA4kzIUvRGhLPlIBi1VxeoXaUe1q+kqsMpyroVsUq9sJq5wcOFTMojHKZZ4ircacv vatsalyaparashar@vatsalyas-MacBook-Air.local\n"
            },
            "metadata_fingerprint": "uy0O0g-MUU8=",
            "name": "mongodb-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.232.163.34",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/rickfav/global/networks/default",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/rickfav/regions/us-central1/subnetworks/default",
                "subnetwork_project": "rickfav"
              }
            ],
            "project": "rickfav",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rickfav/zones/us-central1-a/instances/mongodb-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "attached_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_disk.mongodb_disk"
          ]
        }
      ]
    }
  ]
}